--- a/css/main.css
+++ b/css/main.css
@@ -109,21 +109,21 @@ body {
 }
 
 #nav-main {
-    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
-
 #nav-main a {
-    display: inline-block;
     padding-left: 15px;
     opacity: 0.85;
 }
 
 #nav-left {
-    margin: 7px 0 0 10px;
+   margin: 25px 0 0 10px;
 }
 
-#nav-left {
-    float: right;
+#nav-right {
+    margin: 25px 10px 0 0;
     padding-right: 15px;
 }
 
@@ -210,6 +210,10 @@ body {
 
 #fcr {
     margin-right: 30px;
+}
+
+.flex-container {
+    display: flex;
 }
 
 
